# robot

./: .gitignore  camera.py  expander.py  hello.py  main.py  pyproject.toml  robot.py
scripts/: debug.sh  deploy.sh  run.sh
static/: main.css  main.js
templates/: index.html
