[project]
name = "robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.9",
    "fastapi[standard]>=0.115.6",
    "gpiozero>=2.0.1",
    "imutils>=0.5.4",
    "opencv-python>=4.10.0.84",
    "pigpio>=1.78",
    "websockets>=14.1",
]

[dependency-groups]
dev = ["mypy>=1.13.0", "ruff>=0.8.1"]

[tool.ruff]
line-length = 100
exclude = [".venv", ".mypy_cache"]
